--- a/styles/main.css
+++ b/styles/main.css
@@ -119,6 +119,7 @@
      display: flex;
      align-items: center;
      justify-content: center;
+     border-top: 3px solid #3C9A66;
  }
 
  #simple-logo {
