added favicons, javascript for dropdown, and components for the navbar and footer and log in state and stuff

--- a/styles/about-us.css
+++ b/styles/about-us.css
@@ -5,7 +5,7 @@
     align-items: center;
     justify-content: center;
     text-align: center;
-    padding: 115px;
+    padding: 40px 115px 115px;
     width: auto;
     max-width: 735px;
     margin: 0 350px;
