artist and user profile, user and artist settings, edit portfolio overlay, log in updated etc

--- a/components/navbar.html
+++ b/components/navbar.html
@@ -14,30 +14,30 @@
             <a class="navbutton" id="login" href="login.html">Log In</a>
             <a class="navbutton" id="create-account" href="create-account.html">Create Account</a>
         </div>
-        <div id="logged-in-profile" class="right-buttons-group">
+        <div id="logged-in-profile" class="right-buttons-group" style="display: none;">
             <div class="profile-container">
-                <a id="profile-link" href="user-profile.html">
-                    <div class="profile-dropdown">
+                <div class="profile-dropdown" onclick="toggleDropdown();">
+                    <a id="profile-link" href="user-profile.html">
                         <img id="nav-profile-pic" class="nav-profile-pic" src="images/profile photos/User/UP_4.jpg"
                             alt="Profile">
-                        <div class="dropdown-arrow" onclick="event.preventDefault(); toggleDropdown();"></div>
-                    </div>
-                </a>
+                    </a>
+                    <div class="dropdown-arrow"></div>
+                </div>
                 <div id="dropdown-menu" class="dropdown-menu">
                     <div class="dropdown-header">
                         <p id="dropdown-username" class="dropdown-username">@username</p>
                         <p id="dropdown-account-type" class="dropdown-account-type">Personal Account</p>
                     </div>
-                    <button class="convert-btn" id="convert-account-btn">Convert to Artist Account</button>
+                    <button class="convert-btn" id="convert-account-btn" onclick="convertAccount()">Convert to Artist Account</button>
                     <a href="#" class="dropdown-item">
                         <img src="images/favicons/settings.png" class="dropdown-icon-img" alt="Settings">
                         <span>Account Settings</span>
                     </a>
-                    <a href="#" class="dropdown-item">
+                    <a href="messages.html" class="dropdown-item">
                         <img src="images/favicons/messages.png" class="dropdown-icon-img" alt="Messages">
                         <span>Messages</span>
                     </a>
-                    <a href="#" class="dropdown-item">
+                    <a href="discover.html" class="dropdown-item">
                         <img src="images/favicons/search.png" class="dropdown-icon-img" alt="Search">
                         <span>Search</span>
                     </a>
