--- a/styles/grid.css
+++ b/styles/grid.css
@@ -1,9 +1,9 @@
         #grid-container {
             display: grid;
             grid-template-columns: repeat(4, 1fr);
-            gap: 43px;
+            gap: 12px;
             padding: 10px;
-            margin: auto 85px
+            margin: 10px 112px;
         }
 
         #grid-item {
@@ -16,5 +16,5 @@
             width: 100%;
             height: auto;
             display: block;
-            border-radius: 5px;
+            border-radius: 12px;
         }
