html and components updated

--- a/components/navbar.html
+++ b/components/navbar.html
@@ -28,7 +28,8 @@
                         <p id="dropdown-username" class="dropdown-username">@username</p>
                         <p id="dropdown-account-type" class="dropdown-account-type">Personal Account</p>
                     </div>
-                    <button class="convert-btn" id="convert-account-btn" onclick="convertAccount()">Convert to Artist Account</button>
+                    <button class="convert-btn" id="convert-account-btn" onclick="convertAccount()">Convert to Artist
+                        Account</button>
                     <a href="#" class="dropdown-item">
                         <img src="images/favicons/settings.png" class="dropdown-icon-img" alt="Settings">
                         <span>Account Settings</span>
