--- a/styles/main.css
+++ b/styles/main.css
@@ -73,6 +73,7 @@
 
  #center-buttons-group {
      display: flex;
+     font-size: 1.5rem;
      background-color: #FFC857;
      border-radius: 10px;
      justify-content: center;
@@ -104,6 +105,19 @@
      border-radius: 10px;
      align-items: center;
      justify-content: center;
+     transition: background-color 0.2s ease;
+ }
+
+ #discover-button:hover {
+     background-color: #ffb92c;
+ }
+
+ #about-us-button:hover {
+     background-color: #ffb92c;
+ }
+
+ #guides-button:hover {
+     background-color: #ffb92c;
  }
 
  #login {
@@ -142,8 +156,8 @@
  }
 
  .nav-profile-pic {
-     width: 55px;
-     height: 55px;
+     width: 75px;
+     height: 75px;
      border-radius: 50%;
      object-fit: cover;
      border: 2px solid #4FBA7F;
